{
    "app_name": "Wolt",
    "monday": "Monday",
    "tuesday": "Tuesday",
    "wednesday": "Wednesday",
    "thursday": "Thursday",
    "friday": "Friday",
    "saturday": "Saturday",
    "sunday": "Sunday",
    "today": "Today",
    "closed": "Closed",
    "opening_hours": "Opening Hours"
}
