{
    "app_name": "Wolt",
    "monday": "Maanantai",
    "tuesday": "Tiistai",
    "wednesday": "Keskiviikko",
    "thursday": "Torstai",
    "friday": "Perjantai",
    "saturday": "Lauantai",
    "sunday": "Sunnuntai",
    "today": "Tänään",
    "closed": "Suljettu",
    "opening_hours": "Aukioloajat"
}
